reorg authform css to dedup, resolve collapsing margins between the two inputs

--- a/client/src/components/Authform.css
+++ b/client/src/components/Authform.css
@@ -2,7 +2,7 @@
 
 .auth-form {
     /*size and position*/
-    height: 500px;
+    height: 550px;
     width: 380px;
     box-sizing: border-box;
     padding: 20px 0 30px 0;
@@ -19,20 +19,27 @@
     background-color: white;
     font-family: Montserrat;
 }
+
 .auth-form form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 10px;
+}
+
+.auth-form button, 
+.auth-form a, 
+.auth-form input {
+    width: 250px;
+    height: 40px;
+    line-height: 40px;
+    padding: 0px;
+    margin: 5px;
 }
 
 .auth-form button {
     /*size and position*/
-    width: 250px;
-    height: 40px!important;
-    line-height: 40px;
-    padding: 0px;
-    margin: 5px;
     align-items: center;
     
     /*font and color*/
@@ -45,10 +52,6 @@
 }
 .auth-form a {
     /*size and position*/
-    width: 250px;
-    height: 40px;
-    line-height: 40px;
-    margin: 5px;
     display: block;
     
     /*font and color*/
@@ -59,12 +62,8 @@
 
 .auth-form input {
     /*size and position*/
-    width: 250px;
-    height: 40px;
-    line-height: 40px;
     box-sizing: border-box;
     display: block;
-    margin: 5px;
     padding-left: 10px;
     
     /*font and color*/
@@ -112,7 +111,7 @@
 
 #forgot-password-label {
     /*size and position*/
-    margin: 8px 0px 10px 0px;
+    margin: 8px auto;
     height: 11px;
     line-height: 11px;
 }
@@ -122,4 +121,7 @@
 }
 .auth-redirect {
     margin-top: 20px!important;
+}
+.auth-fields > :first-child {
+    margin-bottom: 10px!important;
 }
